--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,10 +33,10 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            rosven9856/basic-php-fpm-alpine:${{ github.event.release.tag_name }}
-            rosven9856/basic-php-fpm-alpine:latest
+            rosven9856/php:${{ github.event.release.tag_name }}
+            rosven9856/php:latest
 
-      - name: create release in rosven9856/docker_php repository
+      - name: create release in rosven9856/php-mysql-docker repository
         env:
           GH_TOKEN: ${{ secrets._GITHUB_TOKEN }}
         run: |
@@ -44,7 +44,7 @@ jobs:
             --method POST \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/rosven9856/docker_php/releases \
+            /repos/rosven9856/php-mysql-docker/releases \
             -f tag_name='${{ github.event.release.tag_name }}' \
             -f target_commitish='master' \
             -f name='${{ github.event.release.tag_name }}' \
@@ -59,7 +59,7 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
-            Github. Creating new release php basic
+            Github. Creating new release php
             
             Repository: ${{ github.repository }}
             Release: ${{ github.event.release.tag_name }}
