--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: ci action
+name: CI
 
 on:
   release:
@@ -8,26 +8,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-
-      - name: git pull
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           ref: master
-
-      - name: install QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: install buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to docker hub
-        uses: docker/login-action@v3
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
         with:
           username: rosven9856
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: build and push docker container
-        uses: docker/build-push-action@v5
+      - uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
@@ -35,8 +25,7 @@ jobs:
           tags: |
             rosven9856/php:${{ github.event.release.tag_name }}
             rosven9856/php:latest
-
-      - name: create release in rosven9856/php-extended-docker repository
+      - name: Create release in rosven9856/php-extended-docker repository
         env:
           GH_TOKEN: ${{ secrets._GITHUB_TOKEN }}
         run: |
@@ -52,9 +41,7 @@ jobs:
             -F draft=false \
             -F prerelease=false \
             -F generate_release_notes=false
-
-      - name: send telegram message
-        uses: appleboy/telegram-action@master
+      - uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
