--- a/.github/workflows/semantic-versioning.yml
+++ b/.github/workflows/semantic-versioning.yml
@@ -21,8 +21,8 @@ jobs:
             rosven9856/php
           tags: |
             type=semver,pattern={{version}},value=8.3.10
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
+            type=semver,pattern={{major}}.{{minor}},value=8.3.10
+            type=semver,pattern={{major}},value=8.3.10
       - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
       - uses: docker/login-action@v3
