--- a/.github/workflows/semantic-versioning.yml
+++ b/.github/workflows/semantic-versioning.yml
@@ -11,6 +11,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+        id: vars
       - uses: actions/checkout@v4
         with:
           ref: ${{env.BRANCH}}
@@ -20,10 +22,10 @@ jobs:
           images: |
             rosven9856/php
           tags: |
-            type=raw,value=8.3.10+build-${{ github.sha }}
-            type=semver,pattern={{version}},value=8.3.10
-            type=semver,pattern={{major}}.{{minor}},value=8.3.10
-            type=semver,pattern={{major}},value=8.3.10
+            type=raw,priority=100,value=8.3.10-build-${{ steps.vars.outputs.sha_short }}
+            type=semver,priority=200,pattern={{version}},value=8.3.10
+            type=semver,priority=300,pattern={{major}}.{{minor}},value=8.3.10
+            type=semver,priority=400,pattern={{major}},value=8.3.10
       - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
       - uses: docker/login-action@v3
