test semantic versioning - updates

--- a/.github/workflows/semantic-versioning.yml
+++ b/.github/workflows/semantic-versioning.yml
@@ -14,18 +14,18 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{env.BRANCH}}
-      - run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-        id: vars
       - run: cp .env.dist .env
       - uses: falti/dotenv-action@v1
         id: dotenv
+      - run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+        id: git
       - uses: docker/metadata-action@v5
         id: meta
         with:
           images: |
             rosven9856/php
           tags: |
-            type=raw,priority=100,value=8.3.10-${{ steps.vars.outputs.sha_short }}
+            type=raw,priority=100,value=8.3.10-${{ steps.git.outputs.sha_short }}
             type=semver,priority=200,pattern={{version}},value=8.3.10
             type=semver,priority=300,pattern={{major}}.{{minor}},value=8.3.10
             type=semver,priority=400,pattern={{major}},value=8.3.10
