--- a/.github/workflows/release-tests.yml
+++ b/.github/workflows/release-tests.yml
@@ -114,9 +114,9 @@ jobs:
             --method POST \
             -H "Accept: application/vnd.github+json" \
             /repos/rosven9856/php-docker/releases \
-            -f tag_name='${{ steps.version.outputs.version }}+${{ steps.git.outputs.sha_short }}' \
+            -f tag_name='${{ steps.version.outputs.sem_version }}+${{ steps.git.outputs.sha_short }}' \
             -f target_commitish='master' \
-            -f name='${{ steps.version.outputs.version }}+${{ steps.git.outputs.sha_short }}' \
+            -f name='${{ steps.version.outputs.sem_version }}+${{ steps.git.outputs.sha_short }}' \
             -f body='' \
             -F draft=false \
             -F prerelease=false \
