--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -105,9 +105,8 @@ jobs:
       - uses: docker/setup-buildx-action@v3
       - uses: docker/login-action@v3
         with:
-          registry: ${{ vars.DOCKER_REGISTRY }}
           username: rosven9856
-          password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - uses: docker/build-push-action@v6
         with:
           context: .
