--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
       - name: dockerfile parser
         id: dockerfile_parser
         run: |
-          FROM="$(grep '^FROM' Dockerfile | head -1 | awk '{print $2}')"
+          FROM="$(grep '^FROM php' Dockerfile | head -1 | awk '{print $2}')"
 
           IMAGE="${FROM%%:*}"
           TAG="${FROM#*:}"
@@ -123,7 +123,7 @@ jobs:
       - name: dockerfile parser
         id: dockerfile_parser
         run: |
-          FROM="$(grep '^FROM' Dockerfile | head -1 | awk '{print $2}')"
+          FROM="$(grep '^FROM php' Dockerfile | head -1 | awk '{print $2}')"
 
           IMAGE="${FROM%%:*}"
           TAG="${FROM#*:}"
